// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrganizationAuthList renders 1`] = `
<div
  className="sso"
>
  <SettingsPageHeading
    title="Authentication"
  />
  <PermissionAlert
    access={
      Array [
        "org:write",
      ]
    }
  />
  <Panel>
    <PanelHeader>
      Choose a provider
    </PanelHeader>
    <PanelBody
      direction="column"
      disablePadding={true}
      flex={false}
    >
      <PanelAlert
        type="info"
      >
        <span
          key="5"
        >
          <span
            key="0"
          >
            Get started with Single Sign-on for your organization by selecting a provider. Read more in our 
          </span>
          <ExternalLink
            href="https://docs.sentry.io/learn/sso/"
            key="2"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span
              key="1"
            >
              SSO documentation
            </span>
          </ExternalLink>
          <span
            key="3"
          >
            .
          </span>
        </span>
      </PanelAlert>
      <form
        action="/organizations/org-slug/auth/configure/"
        method="POST"
      >
        <input
          name="csrfmiddlewaretoken"
          type="hidden"
          value=""
        />
        <input
          name="init"
          type="hidden"
          value="1"
        />
        <ProviderItem
          key="dummy"
          onConfigure={[Function]}
          provider={
            Object {
              "key": "dummy",
              "name": "Dummy",
              "requiredFeature": "organizations:sso-basic",
            }
          }
        />
        <ProviderItem
          key="dummy2"
          onConfigure={[Function]}
          provider={
            Object {
              "key": "dummy2",
              "name": "Dummy SAML",
              "requiredFeature": "organizations:sso-saml2",
            }
          }
        />
      </form>
    </PanelBody>
  </Panel>
</div>
`;

exports[`OrganizationAuthList renders with no providers 1`] = `
<div
  className="sso"
>
  <SettingsPageHeading
    title="Authentication"
  />
  <PermissionAlert
    access={
      Array [
        "org:write",
      ]
    }
  />
  <Panel>
    <PanelHeader>
      Choose a provider
    </PanelHeader>
    <PanelBody
      direction="column"
      disablePadding={true}
      flex={false}
    >
      <PanelAlert
        type="info"
      >
        <span
          key="5"
        >
          <span
            key="0"
          >
            Get started with Single Sign-on for your organization by selecting a provider. Read more in our 
          </span>
          <ExternalLink
            href="https://docs.sentry.io/learn/sso/"
            key="2"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span
              key="1"
            >
              SSO documentation
            </span>
          </ExternalLink>
          <span
            key="3"
          >
            .
          </span>
        </span>
      </PanelAlert>
      <form
        action="/organizations/org-slug/auth/configure/"
        method="POST"
      >
        <input
          name="csrfmiddlewaretoken"
          type="hidden"
          value=""
        />
        <input
          name="init"
          type="hidden"
          value="1"
        />
        <EmptyMessage>
          No authentication providers are available.
        </EmptyMessage>
      </form>
    </PanelBody>
  </Panel>
</div>
`;
